<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="historyViewModel"
            type="com.example.ironwillapp.models.History" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F6F6F6"
        android:clickable="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rankView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border_without_frame"
            android:elevation="5dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/history_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:lineSpacingExtra="3.3sp"
                android:text="@string/days"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="3.3sp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    tools:text="@string/from_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/to_sign"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/endedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:lineSpacingExtra="3.3sp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    tools:text="@string/from_date" />

            </LinearLayout>

            <TextView
                android:id="@+id/reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:lineSpacingExtra="3.3sp"
                android:text="@string/reason"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>


</layout>
