<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <data></data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="12dp">


        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/startBtn"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:background="@drawable/circle_shape2"
            android:indeterminate="false"
            android:max="24"
            android:minWidth="300dp"
            android:minHeight="300dp"
            android:progress="0"
            android:progressDrawable="@drawable/circle_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="112dp"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/start"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/resetBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/startBtn"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <RelativeLayout
            android:id="@+id/historyBtn"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="28dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rankBtn"
            app:layout_constraintTop_toBottomOf="@+id/resetBtn"
            app:layout_constraintVertical_bias="0.074">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/blue_500"
                android:contentDescription="@string/history"
                app:srcCompat="@drawable/ic_history_24" />
        </RelativeLayout>

        <TextView
            android:id="@+id/myRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="12dp"
            android:text="@string/my_rank"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rankBtn" />

        <TextView
            android:id="@+id/histroy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/history"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toEndOf="@+id/myRank"
            app:layout_constraintTop_toBottomOf="@+id/historyBtn" />

        <RelativeLayout
            android:id="@+id/rankBtn"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="28dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/historyBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startBtn"
            app:layout_constraintVertical_bias="0.069">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="56dp"
                android:layout_height="52dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/blue_500"
                android:contentDescription="@string/my_rank"
                app:srcCompat="@drawable/ic_star_24" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
